name:                streaming-base64
version:             0.1.0.0
synopsis:            Streaming conversion from/to base64
-- description:
license:             PublicDomain
author:              koral
maintainer:          koral@mailoo.org
-- category:
build-type:          Simple
-- extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

source-repository head
    type: git
    location: git://github.com/k0ral/streaming-base64.git

library
  exposed-modules:
    Streaming.Base64
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.7 && <5, safe-exceptions, streaming, streaming-bytestring, transformers
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite unit-tests
  type: exitcode-stdio-1.0
  main-is: UnitTests.hs
  build-depends: base >=4.7 && <5, streaming-base64, streaming-bytestring, tasty, tasty-hunit
  default-language: Haskell2010
  hs-source-dirs: test
  -- other-modules:
